--- a/index.html
+++ b/index.html
@@ -3,28 +3,88 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DooikaGame</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>DooikaGame</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.svg">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DooikaGame</div>
-      </div>
-    </div>
-    <script>
 
+    <!-- Logo del Juego -->
+    <header class="flex flex-col items-center">
+        <div class="logo-container">
+            <img src="TemplateData/logo.png" alt="DooikaGame" class="game-logo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+            <span class="hidden text-xl font-black text-white tracking-widest uppercase">DooikaGame</span>
+        </div>
+        <p class="text-indigo-400 text-[10px] font-bold uppercase tracking-[0.4em]">Web Experience</p>
+    </header>
+
+    <div id="unity-warning"></div>
+
+    <!-- Layout Principal -->
+    <main class="main-layout">
+        <aside class="side-gallery left-side">
+            <div class="circle-item">
+                <img src="TemplateData/img1.png" alt="1" onerror="this.style.display='none';">
+                <span class="text-[10px] text-slate-400 font-bold">1</span>
+            </div>
+            <div class="circle-item">
+                <img src="TemplateData/img3.png" alt="3" onerror="this.style.display='none';">
+                <span class="text-[10px] text-slate-400 font-bold">3</span>
+            </div>
+        </aside>
+
+        <div id="unity-container-wrapper">
+          <div id="unity-container" style="width: 960px; aspect-ratio: 960 / 600;">
+              <canvas id="unity-canvas" tabindex="-1"></canvas>
+              <div id="unity-loading-bar">
+                  <div class="w-8 h-8 border border-indigo-500 border-t-transparent rounded-full animate-spin"></div>
+                  <div id="unity-progress-bar-empty">
+                      <div id="unity-progress-bar-full"></div>
+                  </div>
+              </div>
+          </div>
+
+          <button id="unity-fullscreen-button" class="fullscreen-btn">
+                <svg width="14" height="14" viewBox="0 0 20 20" fill="currentColor"><path d="M1 1v6h2V3h4V1H1zm12 0v2h4v4h2V1h-6zM1 19h6v-2H3v-4H1v6zm16-4v4h-4v2h6v-6h-2z"/></svg>
+                Pantalla Completa
+            </button>
+        </div>
+
+        <aside class="side-gallery right-side">
+            <div class="circle-item">
+                <img src="TemplateData/img2.png" alt="2" onerror="this.style.display='none';">
+                <span class="text-[10px] text-slate-400 font-bold">2</span>
+            </div>
+            <div class="circle-item">
+                <img src="TemplateData/img4.png" alt="4" onerror="this.style.display='none';">
+                <span class="text-[10px] text-slate-400 font-bold">4</span>
+            </div>
+        </aside>
+    </main>
+
+    <!-- Footer: Quienes Somos -->
+    <footer class="w-full max-w-2xl px-6 mb-16">
+        <div class="bg-slate-900/50 border border-white/5 p-8 flex items-center gap-8 relative overflow-hidden">
+            <div class="absolute top-0 left-0 w-1 h-full bg-indigo-600"></div>
+            <div class="w-[55px] h-[55px] bg-slate-800 flex items-center justify-center border border-white/10 shrink-0">
+                <img src="TemplateData/company_logo.png" alt="Icon" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <span class="hidden text-xl">🏢</span>
+            </div>
+            <div class="flex-1">
+                <h3 class="text-xs font-black text-indigo-400 uppercase tracking-[0.2em] mb-2">Quiénes Somos</h3>
+                <p class="text-slate-400 text-xs leading-relaxed font-medium">
+                    Picatchi Games es un equipo de desarrollo de Videojuegos Indie. 
+                    Diseñamos cada píxel para ofrecer la mejor calidad.
+                </p>
+            </div>
+        </div>
+        <div class="mt-10 text-center text-slate-700 text-[9px] tracking-[0.5em] uppercase font-bold">
+            &copy; Pikatchi Games - DooikaGame
+        </div>
+    </footer>
+
+    <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
@@ -45,9 +105,9 @@
         var div = document.createElement('div');
         div.innerHTML = msg;
         warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        if (type == 'error') div.style = 'background: rgba(255,0,0,0.8); padding: 10px; margin-bottom: 5px;';
         else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          if (type == 'warning') div.style = 'background: rgba(255,255,0,0.8); color: black; padding: 10px; margin-bottom: 5px;';
           setTimeout(function() {
             warningBanner.removeChild(div);
             updateBannerVisibility();
@@ -83,13 +143,12 @@
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
+        container.style.width = "100vw";
+        container.style.height = "100vh";
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
-
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
@@ -97,8 +156,6 @@
         canvas.style.width = "960px";
         canvas.style.height = "600px";
       }
-
-      loadingBar.style.display = "block";
 
       var script = document.createElement("script");
       script.src = loaderUrl;
